--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
@@ -23,12 +24,12 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "workbox-cli": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && npm run build:sw",
+    "build": "npm run build:icons && react-scripts build && npm run build:sw",
+    "build:icons": "npx @vite-pwa/assets-generator --preset minimal public/icons/master.svg",
     "build:sw": "workbox generateSW workbox-config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
